--- a/笔记/1.连接GitHub.md
+++ b/笔记/1.连接GitHub.md
@@ -8,7 +8,33 @@ git config --global user.email "myname@xxx.com"   # myname@xxx.com 为 GitHub关
 git config --global --list            ## 这里查看上述的操作是否完成
 ```
 
+具体参考： https://gitee.com/all-about-git
 
+## 新增文件
 
-## 提交文件
+```shell
+# 添加当前目录的所有文件到暂存区
+$ git add .
+
+# 添加指定文件到暂存区
+$ git add [file1] [file2] ...
+
+# 添加指定目录到暂存区，包括子目录
+$ git add [dir]
+
+```
+
+## 提交
+
+```shell
+# 提交暂存区到仓库区
+$ git commit -m [message]
+```
+
+## 上传
+
+```shell
+# 上传本地指定分支到远程仓库
+$ git push [remote] [branch]
+```
 
