--- a/笔记/1.连接GitHub.md
+++ b/笔记/1.连接GitHub.md
@@ -10,7 +10,22 @@ git config --global --list            ## 这里查看上述的操作是否完成
 
 具体参考： https://gitee.com/all-about-git
 
-## 新增文件
+## 查看信息
+
+```shell
+# 显示有变更的文件
+git status
+
+# 显示当前分支的版本历史
+$ git log
+
+# 显示当前分支的最近几次提交
+$ git reflog
+```
+
+
+
+## 新增文件到暂存区
 
 ```shell
 # 添加当前目录的所有文件到暂存区
@@ -24,11 +39,35 @@ $ git add [dir]
 
 ```
 
+## 暂存区删除文件
+
+```shell
+git restore --staged <file>
+```
+
 ## 提交
 
 ```shell
 # 提交暂存区到仓库区
 $ git commit -m [message]
+```
+
+## 查看版本号
+
+```shell
+
+```
+
+
+
+## 撤销提交
+
+```shell
+# 恢复暂存区的指定文件到工作区
+$ git checkout [file]
+
+# 恢复某个commit的指定文件到暂存区和工作区
+$ git checkout [commit] [file]
 ```
 
 ## 上传
