--- a/笔记/1.连接GitHub.md
+++ b/笔记/1.连接GitHub.md
@@ -52,22 +52,23 @@ git restore --staged <file>
 $ git commit -m [message]
 ```
 
-## 查看版本号
-
-```shell
-
-```
-
-
-
 ## 撤销提交
 
 ```shell
-# 恢复暂存区的指定文件到工作区
-$ git checkout [file]
+# 重置暂存区的指定文件，与上一次commit保持一致，但工作区不变
+$ git reset [file]
 
-# 恢复某个commit的指定文件到暂存区和工作区
-$ git checkout [commit] [file]
+# 重置暂存区与工作区，与上一次commit保持一致
+$ git reset --hard
+
+# 重置当前分支的指针为指定commit，同时重置暂存区，但工作区不变
+$ git reset [commit]
+
+# 重置当前分支的HEAD为指定commit，同时重置暂存区和工作区，与指定commit一致
+$ git reset --hard [commit]
+
+# 重置当前HEAD为指定commit，但保持暂存区和工作区不变
+$ git reset --keep [commit]
 ```
 
 ## 上传
