--- a/笔记/1.连接GitHub.md
+++ b/笔记/1.连接GitHub.md
@@ -36,7 +36,6 @@ $ git add [file1] [file2] ...
 
 # 添加指定目录到暂存区，包括子目录
 $ git add [dir]
-
 ```
 
 ## 暂存区删除文件
@@ -55,6 +54,15 @@ $ git commit -m [message]
 ## 撤销提交
 
 ```shell
+# 恢复暂存区的指定文件到工作区
+$ git checkout [file]
+
+# 恢复某个commit的指定文件到暂存区和工作区
+$ git checkout [commit] [file]
+
+# 恢复暂存区的所有文件到工作区
+$ git checkout .
+
 # 重置暂存区的指定文件，与上一次commit保持一致，但工作区不变
 $ git reset [file]
 
