--- a/笔记/3.变量.md
+++ b/笔记/3.变量.md
@@ -10,3 +10,59 @@
 let 变量名
 ```
 
+```javascript
+<script>
+  // 声明一个年龄变量
+  let age
+  // 赋值
+  age = 18
+</script>
+```
+
+
+
+## let不允许重复声明
+
+ ![image-20230503231418362](image/3.%E5%8F%98%E9%87%8F/image-20230503231418362.png)
+
+
+
+## 通常
+
+```javascript
+<script>
+    let age = 18
+
+	let name = 'cloud'
+
+	// 或者下面这样
+	let sex = 1, phone = 119
+</script>
+```
+
+
+
+## 小练习
+
+```javascript
+let uname = prompt("请输入姓名")
+```
+
+
+
+## let 和 var的区别
+
+var可以先使用，再声明
+
+var可以重复声明
+
+<script>
+    var num
+    console.log(num)
+    num = 10
+    var num = 20
+    console.log(num);
+</script>
+
+
+
